
  * Support for a large-object sending marshaller.  This functionality
    has necessitated some changes to the marshaller APIs; see below
    for details.

  * GT now uses the open-source Common.Logging package (v1.2.0) for
    logging messages.  Control-flow information is reported at the
    "Trace" level, and informational, warning, and errors are
    reported via the "Info", "Warn", and "Error" levels. 
    Common.Logging provides a simple abstraction to allow selecting
    a logging implementation at runtime (either programmatically
    or via the .NET App.Config mechanism).  For details on use, see
    the documentation at:

	http://netcommon.sourceforge.net/

    By default, Common.Logging uses a NoOpLoggerFactoryAdapter which
    supresses all output.  See section 1.3.2 of the Common.Logging
    reference manual for simple instructions to cause logging to the
    console using the Common.Logging.Simple.ConsoleOutLogger.

    As a result of this change, GT is now much quieter with respect
    to messages written to the system console.

  * The ClientConfiguration and ServerConfiguration classes are now
    afforded the opportunity to configure (or even wrap or replace)
    new transport instances through a ConfigureTransport() method.
    (see BaseConfiguration.ConfigureTransport()).

  * A new UDP-based transport variant that provides sequenced operation.
    This new sequenced UDP transport cheerfully co-exists with the existing
    UDP transports. <https://papyrus.usask.ca/trac/gt/ticket/67>

  * New traffic shaping transport wrappers, LeakyBucketTransport and
    TokenBucketTransport, respectively implementing the leaky bucket
    and token bucket traffic shaping algorithms. 

      * LeakyBucketTransport wraps a provided transport and restricts
	the transport to sending a certain amount of data per time
	unit; the LBT will buffer up to a specified number of bytes,
	and any bytes in excess are discarded (and raising a
	TransportBackloggedWarning).
